# Blue-Pearmain

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  bp  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
analyzer/: privacy.py  tagger.py
config/: com.blue-pearmain.deduplicator.plist  com.blue-pearmain.pipeline.plist  com.blue-pearmain.poller.plist  com.blue-pearmain.reconcile.plist  com.blue-pearmain.reviewer.plist  com.cdevers.blue-pearmain.pipeline.plist  com.cdevers.blue-pearmain.poller.plist  com.cdevers.blue-pearmain.reviewer.plist  config.example.yml
db/: date_precision.py  db.py  migrate_001_privacy_state_check.py  migrate_002_updated_at_and_indexes.py  migrate_003_dimensions_and_dedup.py  photo_filters.py  schema.sql  time_patterns.py
docs/: album-metadata-sync.md  blue-pearmain-0.9.13-code-review.md  blue_pearmain_code_review.docx  daemon-setup.md  export-format.md  flickr-curator.md  future-directions.md  iphoto-migration.md  lan-review-ui.md  maintenance-backlog.md  metadata-sync-architecture.md  pipeline.md  privacy-policy-precedence.md  reliability.md  testing.md
flickr/: album_pusher.py  coalesce_sets.py  flickr_auth.py  flickr_client.py  geo_sync.py  metadata_puller.py  proposal_applier.py  sync_albums.py  sync_collections.py  sync_metadata.py  sync_names_from_flickr.py
poller/: bp_logging.py  contacts_importer.py  deduplicator.py  explain.py  exporter.py  geocoder.py  legacy_apply.py  legacy_cache.py  legacy_indexer.py  legacy_match.py  legacy_normalize.py  legacy_report.py  legacy_uploader.py  link_orphans.py  poller.py  reconcile.py  (+5 more)
(+252 files in other folders)
