[project]
name = "blue-pearmain"
version = "0.2.2"
description = "Privacy-aware tool for harmonizing Apple Photos and Flickr libraries"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "requests-oauthlib>=1.3",
    "pyyaml>=6.0",
    "flask>=3.0",
    "photoscript>=0.5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"
